# agentic-rca-manufacturing

./: .gitignore  README.md  pyproject.toml
outputs/: demo_run.md  metrics.json  site_data.json
rca/: data.py  demo.py  explain.py  export_site.py  gate.py  train.py
